class Tuberia : public Actualizable {
private:
    // Implementar la lógica de las tuberías

public:
    void Dibujar() {
        // Código para dibujar las tuberías
    }

    void Actualizar() override {
        // Implementar la lógica de actualización de las tuberías
    }
};