@startuml
class Actualizable
class Juego
class Jugador
class Menu 
class Pajaro
class Tuberia 
class Animal
class Objeto 
class FlappyBird

Jugador o--Pajaro 
Jugador o--Tuberia
Jugador o--Menu
Jugador o--Juego
Jugador o--Actualizable
Jugador o--Animal
Jugador o--Objeto  
Juego *--Menu
Juego *--Actualizable
Juego *--Pajaro
Juego *--Tuberia 
Pajaro--|>Animal
FlappyBird--|>Juego 
FlappyBird o--Pajaro 







@enduml  